--- a/tool.ipynb
+++ b/tool.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,8 @@
     "\n",
     "# Path for input data\n",
     "path = 'input.xlsx'\n",
-    "outputfilename = 'OUTPUT-'\n",
     "\n",
-    "# Output filetype\n",
+    "# Output filetype for CCL and authview code\n",
     "filetype = '.txt'\n",
     "\n",
     "#import libraries\n",
@@ -30,15 +29,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CCL Activate Code file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Activate Code file\n",
     "outfilp = r'C:\\Users\\\\'\n",
     "outfilp = outfilp + username + '\\\\'\n",
-    "outputfilename = '-OUTPUT-ACTIVATE-CODE-'\n",
+    "outputfilename = '-ACTIVATE-CODE-'\n",
     "datetime_str = str(datetime.datetime.now())\n",
     "datetime_str = datetime_str.replace('.', '_')\n",
     "datetime_str = datetime_str.replace(':', '-')\n",
@@ -58,19 +64,170 @@
     "]\n",
     "\n",
     "# READ CSV FILE\n",
-    "input_data = pd.read_excel(path, sheet_name= 'DATA' )\n",
+    "input_data = pd.read_excel(path, sheet_name= 'DATA', dtype= 'str' )\n",
     "\n",
     "# WRITE CODE TO TXT FILE\n",
     "for index, row in input_data.iterrows():\n",
     "    # Column that has the usernames to put in the code\n",
-    "    to_switch = row['USERNAME']\n",
+    "    a = row['USERNAME']\n",
     "    #Write to file\n",
     "    for a_row in ccl_code:\n",
     "        # REPLACE SWAPME123 with the username in each row of the code slab\n",
     "        new_row = a_row.replace('SWAPME123', to_switch)\n",
     "        f = open(outputfilename, \"a\")\n",
     "        f.write(new_row + '\\n')\n",
+    "f.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Authview Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Authview file\n",
+    "outfilp = r'C:\\Users\\\\'\n",
+    "outfilp = outfilp + username + '\\\\'\n",
+    "outputfilename = '-AUTHVIEW-CODE-'\n",
+    "datetime_str = str(datetime.datetime.now())\n",
+    "datetime_str = datetime_str.replace('.', '_')\n",
+    "datetime_str = datetime_str.replace(':', '-')\n",
+    "outputfilename = outfilp + datetime_str + outputfilename + filetype\n",
+    "outputfilename = str(outputfilename)\n",
+    "\n",
+    "# CCL Code\n",
+    "authview_code = [\n",
+    "'modify SWAPME123 -directoryind y'\n",
+    "]\n",
+    "\n",
+    "# READ CSV FILE\n",
+    "input_data = pd.read_excel(path, sheet_name= 'DATA', dtype= 'str' )\n",
+    "\n",
+    "# WRITE CODE TO TXT FILE\n",
+    "for index, row in input_data.iterrows():\n",
+    "    # Column that has the usernames to put in the code\n",
+    "    to_switch = row['USERNAME']\n",
+    "    #Write to file\n",
+    "    for a_row in authview_code:\n",
+    "        # REPLACE SWAPME123 with the username in each row of the code slab\n",
+    "        new_row = a_row.replace('SWAPME123', to_switch)\n",
+    "        f = open(outputfilename, \"a\")\n",
+    "        f.write(new_row + '\\n')\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CCL Credential Code file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Credential Code file\n",
+    "outfilp = r'C:\\Users\\\\'\n",
+    "outfilp = outfilp + username + '\\\\'\n",
+    "outputfilename = '-CREDENTIAL-CODE-'\n",
+    "datetime_str = str(datetime.datetime.now())\n",
+    "datetime_str = datetime_str.replace('.', '_')\n",
+    "datetime_str = datetime_str.replace(':', '-')\n",
+    "outputfilename = outfilp + datetime_str + outputfilename + filetype\n",
+    "outputfilename = str(outputfilename)\n",
+    "\n",
+    "# CCL Code\n",
+    "ccl_code = [\n",
+    "'; CREDENTIAL MOVE SCRIPT'\n",
+    ", 'update into credential cred'\n",
+    ", 'set cred.prsnl_id = (select person_id from prsnl where username = \"SWAPME123\")'\n",
+    ", ', cred.credential_cd = (select code_value from code_value where code_set = 29600 and display = \"SWAP_TO_REAL_CREDENTIAL\")'\n",
+    ", ', cred.credential_type_cd = 686580 ; License from code set 254874'\n",
+    ", ', cred.beg_effective_dt_tm = cnvtdatetime(curdate,curtime3)'\n",
+    ", ', cred.active_ind = 1'\n",
+    ", ', cred.active_status_dt_tm = cnvtdatetime(curdate,curtime3)'\n",
+    ", ', cred.active_status_cd = 188 ; Active from code set 48'\n",
+    ", ', cred.updt_dt_tm = cnvtdatetime(curdate,curtime3)'\n",
+    ", ', cred.updt_id = reqinfo->updt_id'\n",
+    ", ', cred.updt_cnt = cred.updt_cnt + 1'\n",
+    ", 'where cred.credential_id  = ('\n",
+    ", 'select min(credential_id)'\n",
+    ", 'from credential'\n",
+    ", 'where prsnl_id = 13876656 ; Credential Box user in prod'\n",
+    ", ')'\n",
+    ", 'and not exists ('\n",
+    ", 'select 1'\n",
+    ", 'from credential'\n",
+    ", 'where prsnl_id = (select person_id from prsnl where username = \"SWAPME123\")'\n",
+    ", 'and credential_cd = (select code_value from code_value where code_set = 29600 and display = \"SWAP_TO_REAL_CREDENTIAL\")'\n",
+    ", 'and active_ind = 1'\n",
+    ", ')'\n",
+    ", ''\n",
+    "]\n",
+    "\n",
+    "# READ CSV FILE\n",
+    "input_data = pd.read_excel(path, sheet_name= 'DATA', dtype= 'str' )\n",
+    "\n",
+    "# WRITE CODE TO TXT FILE\n",
+    "for index, row in input_data.iterrows():\n",
+    "    # Column that has the usernames to put in the code\n",
+    "    to_switch_1 = row['USERNAME']\n",
+    "    to_switch_2 = row['CREDENTIAL']\n",
+    "    #Write to file\n",
+    "    for a_row in ccl_code:\n",
+    "        # REPLACE SWAPME123 with the username in each row of the code slab\n",
+    "        new_row = a_row.replace('SWAPME123', to_switch_1)\n",
+    "        new_row_2 = new_row.replace('SWAP_TO_REAL_CREDENTIAL', to_switch_2)\n",
+    "        f = open(outputfilename, \"a\")\n",
+    "        f.write(new_row_2 + '\\n')\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Content Manager Upload CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel(r'\\INPUT_TEMPLATES\\Personnel_template.xlsx', header=[0, 1], dtype= 'str')\n",
+    "\n",
+    "end_date = r\"30/12/2100\"\n",
+    "\n",
+    "for index, row in input_data.iterrows():\n",
+    "    # Column that has the usernames to put in the code\n",
+    "    a_user = row['USERNAME']\n",
+    "    a_credential = row['CREDENTIAL']\n",
+    "    a_fname = row['FIRST']\n",
+    "    a_lname = row['LAST']\n",
+    "    a_position = row['POSITION']\n",
+    "    a_extid = 'WHS' + a_user\n",
+    "    physician_ind = 0\n",
+    "    if a_position = 'Medical Officer':\n",
+    "        physician_ind = 1\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #Write to file"
    ]
   }
  ],
