--- a/tool.ipynb
+++ b/tool.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "# Create Activate Code file\n",
     "outfilp = r'C:\\Users\\\\'\n",
     "outfilp = outfilp + username + '\\\\'\n",
-    "outputfilename = '-ACTIVATE-CODE-'\n",
+    "outputfilename = '-ACTIVATE-CODE'\n",
     "datetime_str = str(datetime.datetime.now())\n",
     "datetime_str = datetime_str.replace('.', '_')\n",
     "datetime_str = datetime_str.replace(':', '-')\n",
@@ -69,7 +69,7 @@
     "# WRITE CODE TO TXT FILE\n",
     "for index, row in input_data.iterrows():\n",
     "    # Column that has the usernames to put in the code\n",
-    "    a = row['USERNAME']\n",
+    "    to_switch = row['USERNAME'].upper()\n",
     "    #Write to file\n",
     "    for a_row in ccl_code:\n",
     "        # REPLACE SWAPME123 with the username in each row of the code slab\n",
@@ -95,7 +95,7 @@
     "# Create Authview file\n",
     "outfilp = r'C:\\Users\\\\'\n",
     "outfilp = outfilp + username + '\\\\'\n",
-    "outputfilename = '-AUTHVIEW-CODE-'\n",
+    "outputfilename = '-AUTHVIEW'\n",
     "datetime_str = str(datetime.datetime.now())\n",
     "datetime_str = datetime_str.replace('.', '_')\n",
     "datetime_str = datetime_str.replace(':', '-')\n",
@@ -113,7 +113,7 @@
     "# WRITE CODE TO TXT FILE\n",
     "for index, row in input_data.iterrows():\n",
     "    # Column that has the usernames to put in the code\n",
-    "    to_switch = row['USERNAME']\n",
+    "    to_switch = row['USERNAME'].upper()\n",
     "    #Write to file\n",
     "    for a_row in authview_code:\n",
     "        # REPLACE SWAPME123 with the username in each row of the code slab\n",
@@ -139,7 +139,7 @@
     "# Create Credential Code file\n",
     "outfilp = r'C:\\Users\\\\'\n",
     "outfilp = outfilp + username + '\\\\'\n",
-    "outputfilename = '-CREDENTIAL-CODE-'\n",
+    "outputfilename = '-CREDENTIAL-CODE'\n",
     "datetime_str = str(datetime.datetime.now())\n",
     "datetime_str = datetime_str.replace('.', '_')\n",
     "datetime_str = datetime_str.replace(':', '-')\n",
@@ -181,7 +181,7 @@
     "# WRITE CODE TO TXT FILE\n",
     "for index, row in input_data.iterrows():\n",
     "    # Column that has the usernames to put in the code\n",
-    "    to_switch_1 = row['USERNAME']\n",
+    "    to_switch_1 = row['USERNAME'].upper()\n",
     "    to_switch_2 = row['CREDENTIAL']\n",
     "    #Write to file\n",
     "    for a_row in ccl_code:\n",
@@ -202,32 +202,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(r'\\INPUT_TEMPLATES\\Personnel_template.xlsx', header=[0, 1], dtype= 'str')\n",
+    "df = pd.read_excel(r'INPUT_TEMPLATES\\Personnel_template.xlsx', header=[1], dtype= 'str')\n",
     "\n",
     "end_date = r\"30/12/2100\"\n",
+    "alias_pool = 'External ID'\n",
+    "today = datetime.date.today()\n",
+    "d1 = today.strftime(\"%d/%m/%Y\")\n",
+    "begin_date = d1 + ' 00:00'\n",
+    "end_date = '31/12/2100 00:00'\n",
+    "act_ind = '1'\n",
+    "org_g_type = 'SECURITY'\n",
+    "org_g_name = 'Western Health'\n",
     "\n",
+    "row_number = 0\n",
     "for index, row in input_data.iterrows():\n",
     "    # Column that has the usernames to put in the code\n",
-    "    a_user = row['USERNAME']\n",
+    "    a_user = row['USERNAME'].upper()\n",
     "    a_credential = row['CREDENTIAL']\n",
     "    a_fname = row['FIRST']\n",
     "    a_lname = row['LAST']\n",
+    "    a_fullname = a_lname + ',' + a_fname + ' - ' + a_credential\n",
     "    a_position = row['POSITION']\n",
     "    a_extid = 'WHS' + a_user\n",
-    "    physician_ind = 0\n",
-    "    if a_position = 'Medical Officer':\n",
-    "        physician_ind = 1\n",
-    "    \n",
-    "    \n",
+    "    physician_ind = '0'\n",
+    "    if a_position == 'Medical Officer':\n",
+    "        physician_ind = '1'\n",
+    "    # Edit Sheet\n",
+    "    df.loc[row_number,'External ID'] = a_extid\n",
+    "    df.loc[row_number,'External Id Alias Pool'] = a_extid\n",
+    "    df.loc[row_number,'*Last Name'] = a_lname\n",
+    "    df.loc[row_number,'*First Name'] = a_fname\n",
+    "    df.loc[row_number,'Name Full Formatted'] = a_fullname\n",
+    "    df.loc[row_number,'Position'] = a_position\n",
+    "    df.loc[row_number,'Begin Date+Time'] = begin_date\n",
+    "    df.loc[row_number,'*End Date+Time'] = end_date\n",
+    "    df.loc[row_number,'Physician Ind'] = physician_ind\n",
+    "    df.loc[row_number,'Active Ind'] = act_ind\n",
+    "    df.loc[row_number,'*Org Group Type'] = org_g_type\n",
+    "    df.loc[row_number,'*Org Group Name'] = org_g_name\n",
+    "    row_number+=1\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "    #Write to file"
+    "outfilp = r'C:\\Users\\\\'\n",
+    "outfilp = outfilp + username + '\\\\'\n",
+    "outputfilename = '-CONTENTMGR'\n",
+    "datetime_str = str(datetime.datetime.now())\n",
+    "datetime_str = datetime_str.replace('.', '_')\n",
+    "datetime_str = datetime_str.replace(':', '-')\n",
+    "outputfilename = outfilp + datetime_str + outputfilename + '.csv'\n",
+    "outputfilename = str(outputfilename)\n",
+    "# Add a blank row\n",
+    "df.loc[-1] = '0'\n",
+    "df.index = df.index + 1  # shifting index\n",
+    "df = df.sort_index()  # sorting by index\n",
+    "df.to_csv(outputfilename, index=False)"
    ]
   }
  ],
