--- a/tool.ipynb
+++ b/tool.ipynb
@@ -232,8 +232,8 @@
     "    if a_position == 'Medical Officer':\n",
     "        physician_ind = '1'\n",
     "    # Edit Sheet\n",
-    "    df.loc[row_number,'External ID'] = a_extid\n",
-    "    df.loc[row_number,'External Id Alias Pool'] = a_extid\n",
+    "    df.loc[row_number,'External Id'] = a_extid\n",
+    "    df.loc[row_number,'External Id Alias Pool'] = alias_pool\n",
     "    df.loc[row_number,'*Last Name'] = a_lname\n",
     "    df.loc[row_number,'*First Name'] = a_fname\n",
     "    df.loc[row_number,'Name Full Formatted'] = a_fullname\n",
@@ -256,7 +256,7 @@
     "outputfilename = outfilp + datetime_str + outputfilename + '.csv'\n",
     "outputfilename = str(outputfilename)\n",
     "# Add a blank row\n",
-    "df.loc[-1] = '0'\n",
+    "df.loc[-1] = df.columns.values\n",
     "df.index = df.index + 1  # shifting index\n",
     "df = df.sort_index()  # sorting by index\n",
     "df.to_csv(outputfilename, index=False)"
