--- a/tool.ipynb
+++ b/tool.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,6 +232,7 @@
     "    if a_position == 'Medical Officer':\n",
     "        physician_ind = '1'\n",
     "    # Edit Sheet\n",
+    "    df.loc[row_number,'Username'] = a_user\n",
     "    df.loc[row_number,'External Id'] = a_extid\n",
     "    df.loc[row_number,'External Id Alias Pool'] = alias_pool\n",
     "    df.loc[row_number,'*Last Name'] = a_lname\n",
