only generate code for when cred is filled out

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,15 +181,17 @@
     "# WRITE CODE TO TXT FILE\n",
     "for index, row in input_data.iterrows():\n",
     "    # Column that has the usernames to put in the code\n",
-    "    to_switch_1 = row['USERNAME'].upper()\n",
-    "    to_switch_2 = row['CREDENTIAL']\n",
+    "    to_switch_1 = str(row['USERNAME'].upper())\n",
+    "    to_switch_2 = str(row['CREDENTIAL'])\n",
     "    #Write to file\n",
     "    for a_row in ccl_code:\n",
-    "        # REPLACE SWAPME123 with the username in each row of the code slab\n",
-    "        new_row = a_row.replace('SWAPME123', to_switch_1)\n",
-    "        new_row_2 = new_row.replace('SWAP_TO_REAL_CREDENTIAL', to_switch_2)\n",
-    "        f = open(outputfilename, \"a\")\n",
-    "        f.write(new_row_2 + '\\n')\n",
+    "        # Only generate code where a credential is filled out\n",
+    "        if to_switch_2 != 'nan':\n",
+    "            # REPLACE SWAPME123 with the username in each row of the code slab\n",
+    "            new_row = a_row.replace('SWAPME123', to_switch_1)\n",
+    "            new_row_2 = new_row.replace('SWAP_TO_REAL_CREDENTIAL', to_switch_2)\n",
+    "            f = open(outputfilename, \"a\")\n",
+    "            f.write(new_row_2 + '\\n')\n",
     "f.close()"
    ]
   },
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +224,9 @@
     "for index, row in input_data.iterrows():\n",
     "    # Column that has the usernames to put in the code\n",
     "    a_user = row['USERNAME'].upper()\n",
-    "    a_credential = row['CREDENTIAL']\n",
+    "    a_credential = str(row['CREDENTIAL'])\n",
+    "    if a_credential == 'nan':\n",
+    "        a_credential = ''\n",
     "    a_fname = row['FIRST']\n",
     "    a_lname = row['LAST']\n",
     "    a_fullname = a_lname + ',' + a_fname + ' - ' + a_credential\n",
