--- a/tool.ipynb
+++ b/tool.ipynb
@@ -225,6 +225,7 @@
     "    # Column that has the usernames to put in the code\n",
     "    a_user = row['USERNAME'].upper()\n",
     "    a_credential = str(row['CREDENTIAL'])\n",
+    "    # Set credential to blank rather than 'nan' if it's not filled out\n",
     "    if a_credential == 'nan':\n",
     "        a_credential = ''\n",
     "    a_fname = row['FIRST']\n",
