--- a/tool-cherwell-dump.ipynb
+++ b/tool-cherwell-dump.ipynb
@@ -1,97 +1,90 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Input Variables"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# INPUTS\n",
     "# Username is used for finding your folder eg. c/users/whittlj2\n",
     "username = 'whittlj2'\n",
-    "\n",
     "# Path for input data\n",
-    "path = 'input.xlsx'\n",
-    "\n",
+    "path = 'in.xlsx'\n",
     "# Output filetype for CCL and authview code\n",
     "filetype = '.txt'\n",
-    "\n",
     "#import libraries\n",
     "import os\n",
     "import datetime\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### CCL Activate Code file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create Activate Code file\n",
+    "import pandas as pd\n",
+    "\n",
+    "# READ CHERWELL Excel FILE\n",
+    "input_data = pd.read_excel(path, dtype= 'str' )\n",
+    "\n",
+    "\n",
+    "# Pull information from the Description column and create a new dataframe\n",
+    "a_row = []\n",
+    "all_rows = []\n",
+    "for index, row in input_data.iterrows():\n",
+    "    a_row_description = str(row['Description'])\n",
+    "    a_desc_list = a_row_description.split('\\n')\n",
+    "    for a_line in a_desc_list:\n",
+    "        # remove tab in in data\n",
+    "        a_line = a_line.replace('              ','')\n",
+    "        a_line = a_line.replace('EMR Credentials: ','EMR Credential: ')    \n",
+    "        # Get username\n",
+    "        if a_line.startswith('Username: '):\n",
+    "            a_username = (a_line.split('Username: ',1)[1]).upper()\n",
+    "            a_row.append(a_username)\n",
+    "        # Get first name\n",
+    "        if a_line.startswith('First Name: '):\n",
+    "            a_fname = (a_line.split('First Name: ',1)[1]).capitalize()\n",
+    "            a_row.append(a_fname)\n",
+    "        # Get Last name\n",
+    "        if a_line.startswith('Last Name: '):\n",
+    "            a_lname = (a_line.split('Last Name: ',1)[1]).capitalize()\n",
+    "            a_row.append(a_lname)\n",
+    "        # Get Position\n",
+    "        if a_line.startswith('EMR Role: '):\n",
+    "            a_position = (a_line.split('EMR Role: ',1)[1])\n",
+    "            # Delete fluff from position\n",
+    "            a_position = a_position.replace(' - Enrolled Non-Endorsed','')\n",
+    "            a_row.append(a_position)\n",
+    "        # Get Credential if none it will be blank\n",
+    "        if a_line.startswith('EMR Credential: '):\n",
+    "            a_credential = (a_line.split('EMR Credential: ',1)[1])\n",
+    "            # Delete fluff from credential string\n",
+    "            a_credential = a_credential.replace(' - Registrar-Medical Officer', '')\n",
+    "            a_credential = a_credential.replace(' - Registered Nurse', '')\n",
+    "            a_credential = a_credential.replace(' - Pharmacist', '')\n",
+    "            a_credential = a_credential.replace(' - Allied Health Assistant', '')\n",
+    "            a_credential = a_credential.replace(' - Nurse - Enrolled', '')\n",
+    "            a_credential = a_credential.replace(' - Enrolled Non-Endorsed', '')\n",
+    "            a_row.append(a_credential)\n",
+    "        if len(a_row) == 5:\n",
+    "            all_rows.append(a_row)\n",
+    "            a_row = []\n",
+    "\n",
+    "#create dataframe to fill in with input data from Cherwell\n",
+    "COLUMN_NAMES = ['USERNAME', 'FIRST', 'LAST', 'POSITION', 'CREDENTIAL' ]\n",
+    "df = pd.DataFrame(all_rows ,columns=COLUMN_NAMES)\n",
+    "\n",
+    "# Create Verify file\n",
     "outfilp = r'C:\\Users\\\\'\n",
     "outfilp = outfilp + username + '\\\\'\n",
-    "outputfilename = '-ACTIVATE-CODE'\n",
+    "outputfilename = '-VERIFY'\n",
     "datetime_str = str(datetime.datetime.now())\n",
     "datetime_str = datetime_str.replace('.', '_')\n",
     "datetime_str = datetime_str.replace(':', '-')\n",
-    "outputfilename = outfilp + datetime_str + outputfilename + filetype\n",
+    "outputfilename = outfilp + datetime_str + outputfilename + '.xlsx'\n",
     "outputfilename = str(outputfilename)\n",
+    "df.to_excel(outputfilename, sheet_name='DATA', index=False)\n",
     "\n",
-    "# CCL Code\n",
-    "ccl_code = [\n",
-    "'; USER RE-ACTIVATION SCRIPT',\n",
-    "'update into prsnl p',\n",
-    "'set p.end_effective_dt_tm = cnvtdatetime(\"31-DEC-2100\")',\n",
-    "', p.updt_dt_tm = cnvtdatetime(curdate,curtime3)',\n",
-    "', p.updt_id = reqinfo->updt_id',\n",
-    "', p.updt_cnt = p.updt_cnt + 1',\n",
-    "'where p.username = \"SWAPME123\"',\n",
-    "''\n",
-    "]\n",
+    "# change path for other readings\n",
+    "path = outputfilename\n",
     "\n",
-    "# READ CSV FILE\n",
-    "input_data = pd.read_excel(path, sheet_name= 'DATA', dtype= 'str' )\n",
     "\n",
-    "# WRITE CODE TO TXT FILE\n",
-    "for index, row in input_data.iterrows():\n",
-    "    # Column that has the usernames to put in the code\n",
-    "    to_switch = row['USERNAME'].upper()\n",
-    "    #Write to file\n",
-    "    for a_row in ccl_code:\n",
-    "        # REPLACE SWAPME123 with the username in each row of the code slab\n",
-    "        new_row = a_row.replace('SWAPME123', to_switch)\n",
-    "        f = open(outputfilename, \"a\")\n",
-    "        f.write(new_row + '\\n')\n",
-    "f.close()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Authview Code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "# Create Authview file\n",
     "outfilp = r'C:\\Users\\\\'\n",
     "outfilp = outfilp + username + '\\\\'\n",
@@ -120,22 +113,8 @@
     "        new_row = a_row.replace('SWAPME123', to_switch)\n",
     "        f = open(outputfilename, \"a\")\n",
     "        f.write(new_row + '\\n')\n",
-    "f.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### CCL Credential Code file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "f.close()\n",
+    "\n",
     "# Create Credential Code file\n",
     "outfilp = r'C:\\Users\\\\'\n",
     "outfilp = outfilp + username + '\\\\'\n",
@@ -176,7 +155,7 @@
     "]\n",
     "\n",
     "# READ CSV FILE\n",
-    "input_data = pd.read_excel(path, sheet_name= 'DATA', dtype= 'str' )\n",
+    "#input_data = pd.read_excel(path, sheet_name= 'DATA', dtype= 'str' )\n",
     "\n",
     "# WRITE CODE TO TXT FILE\n",
     "for index, row in input_data.iterrows():\n",
@@ -192,22 +171,11 @@
     "            new_row_2 = new_row.replace('SWAP_TO_REAL_CREDENTIAL', to_switch_2)\n",
     "            f = open(outputfilename, \"a\")\n",
     "            f.write(new_row_2 + '\\n')\n",
-    "f.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create Content Manager Upload CSV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "f.close()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# Create csv for uploading to content manager\n",
     "df = pd.read_excel(r'INPUT_TEMPLATES\\Personnel_template.xlsx', header=[1], dtype= 'str')\n",
     "\n",
@@ -266,7 +234,8 @@
     "df.loc[-1] = df.columns.values\n",
     "df.index = df.index + 1  # shifting index\n",
     "df = df.sort_index()  # sorting by index\n",
-    "df.to_csv(outputfilename, index=False)"
+    "df.to_csv(outputfilename, index=False)\n",
+    "\n"
    ]
   }
  ],
