--- a/tool-cherwell-dump.ipynb
+++ b/tool-cherwell-dump.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,10 +80,55 @@
     "outputfilename = str(outputfilename)\n",
     "df.to_excel(outputfilename, sheet_name='DATA', index=False)\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#-----------------------------------------------------------------------------------\n",
+    "\n",
     "# change path for other readings\n",
     "path = outputfilename\n",
     "\n",
+    "#-----------------------------------------------------------------------------------\n",
     "\n",
+    "# Create Activate Code file\n",
+    "outfilp = r'C:\\Users\\\\'\n",
+    "outfilp = outfilp + username + '\\\\'\n",
+    "outputfilename = '-ACTIVATE-CODE'\n",
+    "datetime_str = str(datetime.datetime.now())\n",
+    "datetime_str = datetime_str.replace('.', '_')\n",
+    "datetime_str = datetime_str.replace(':', '-')\n",
+    "outputfilename = outfilp + datetime_str + outputfilename + filetype\n",
+    "outputfilename = str(outputfilename)\n",
+    "\n",
+    "# CCL Code\n",
+    "ccl_code = [\n",
+    "'; USER RE-ACTIVATION SCRIPT',\n",
+    "'update into prsnl p',\n",
+    "'set p.end_effective_dt_tm = cnvtdatetime(\"31-DEC-2100\")',\n",
+    "', p.updt_dt_tm = cnvtdatetime(curdate,curtime3)',\n",
+    "', p.updt_id = reqinfo->updt_id',\n",
+    "', p.updt_cnt = p.updt_cnt + 1',\n",
+    "'where p.username = \"SWAPME123\"',\n",
+    "''\n",
+    "]\n",
+    "\n",
+    "# READ CSV FILE\n",
+    "input_data = pd.read_excel(path, sheet_name= 'DATA', dtype= 'str' )\n",
+    "\n",
+    "# WRITE CODE TO TXT FILE\n",
+    "for index, row in input_data.iterrows():\n",
+    "    # Column that has the usernames to put in the code\n",
+    "    to_switch = row['USERNAME'].upper()\n",
+    "    #Write to file\n",
+    "    for a_row in ccl_code:\n",
+    "        # REPLACE SWAPME123 with the username in each row of the code slab\n",
+    "        new_row = a_row.replace('SWAPME123', to_switch)\n",
+    "        f = open(outputfilename, \"a\")\n",
+    "        f.write(new_row + '\\n')\n",
+    "f.close()\n",
+    "\n",
+    "\n",
+    "#---------------------------------------------------------------------------------\n",
     "\n",
     "# Create Authview file\n",
     "outfilp = r'C:\\Users\\\\'\n",
@@ -101,7 +146,7 @@
     "]\n",
     "\n",
     "# READ CSV FILE\n",
-    "input_data = pd.read_excel(path, sheet_name= 'DATA', dtype= 'str' )\n",
+    "#input_data = pd.read_excel(path, sheet_name= 'DATA', dtype= 'str' )\n",
     "\n",
     "# WRITE CODE TO TXT FILE\n",
     "for index, row in input_data.iterrows():\n",
