--- a/tool-cherwell-dump.ipynb
+++ b/tool-cherwell-dump.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,15 @@
     "            a_credential = a_credential.replace(' - Pharmacist', '')\n",
     "            a_credential = a_credential.replace(' - Allied Health Assistant', '')\n",
     "            a_credential = a_credential.replace(' - Nurse - Enrolled', '')\n",
-    "            a_credential = a_credential.replace(' - Enrolled Non-Endorsed', '')\n",
+    "            a_credential = a_credential.replace(' - Clerk - Ward/Admin Officer - Clinical Access', '')\n",
+    "            a_credential = a_credential.replace(' - asdf', '')\n",
+    "            a_credential = a_credential.replace(' - Clinical Nurse Consultant', '')\n",
+    "            a_credential = a_credential.replace(' - Registered Midwife', '')\n",
+    "            a_credential = a_credential.replace(' - Student Nurse', '')\n",
+    "            a_credential = a_credential.replace(' - Physiotherapist', '')\n",
+    "            a_credential = a_credential.replace(' - Senior / Consultant-Medical Officer', '')\n",
+    "            a_credential = a_credential.replace(' - AH - OT Student', '')\n",
+    "            a_credential = a_credential.replace(' - Social Worker', '')\n",
     "            a_row.append(a_credential)\n",
     "        if len(a_row) == 5:\n",
     "            all_rows.append(a_row)\n",
@@ -286,7 +294,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (windows store)",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -300,12 +308,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0d8a354d9faeed0e741e88709d0ca4cfdcbab2911b6a97752e1a88b65797b277"
+    "hash": "99ab24223154bc81de56fc605a85b0e4b0e8fba2ce28055bc07242989cabcf2f"
    }
   }
  },
