--- a/tool-cherwell-dump.ipynb
+++ b/tool-cherwell-dump.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,7 @@
     "            a_credential = (a_line.split('EMR Credential: ',1)[1])\n",
     "            # Delete fluff from credential string\n",
     "            a_credential = a_credential.replace(' - Registrar-Medical Officer', '')\n",
+    "            a_credential = a_credential.replace(' - Medical Officer', '')\n",
     "            a_credential = a_credential.replace(' - Registered Nurse', '')\n",
     "            a_credential = a_credential.replace(' - Pharmacist', '')\n",
     "            a_credential = a_credential.replace(' - Allied Health Assistant', '')\n",
@@ -68,6 +69,8 @@
     "            a_credential = a_credential.replace(' - Senior / Consultant-Medical Officer', '')\n",
     "            a_credential = a_credential.replace(' - AH - OT Student', '')\n",
     "            a_credential = a_credential.replace(' - Social Worker', '')\n",
+    "            a_credential = a_credential.replace(' - Occupational Therapy', '')\n",
+    "            a_credential = a_credential.replace('NONE - Does not apply', 'CLINAO')\n",
     "            a_row.append(a_credential)\n",
     "        if len(a_row) == 5:\n",
     "            all_rows.append(a_row)\n",
@@ -294,7 +297,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('base')",
+   "display_name": "Python 3.9.13 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -308,12 +311,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "99ab24223154bc81de56fc605a85b0e4b0e8fba2ce28055bc07242989cabcf2f"
+    "hash": "0d8a354d9faeed0e741e88709d0ca4cfdcbab2911b6a97752e1a88b65797b277"
    }
   }
  },
