--- a/tool.ipynb
+++ b/tool.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,6 +237,8 @@
     "    physician_ind = '0'\n",
     "    if a_position == 'Medical Officer':\n",
     "        physician_ind = '1'\n",
+    "    if a_position == 'Medical Officer P1':\n",
+    "        physician_ind = '1'\n",
     "    # Edit Sheet\n",
     "    df.loc[row_number,'Username'] = a_user\n",
     "    df.loc[row_number,'External Id'] = a_extid\n",
@@ -272,7 +274,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (windows store)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -286,12 +288,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0d8a354d9faeed0e741e88709d0ca4cfdcbab2911b6a97752e1a88b65797b277"
+    "hash": "99ab24223154bc81de56fc605a85b0e4b0e8fba2ce28055bc07242989cabcf2f"
    }
   }
  },
