--- a/tool.ipynb
+++ b/tool.ipynb
@@ -163,7 +163,7 @@
     ", 'where cred.credential_id  = ('\n",
     ", 'select min(credential_id)'\n",
     ", 'from credential'\n",
-    ", 'where prsnl_id = 13876656 ; Credential Box user in prod'\n",
+    ", 'where prsnl_id = 13876656 ; Credential Box user in prod or cert'\n",
     ", ')'\n",
     ", 'and not exists ('\n",
     ", 'select 1'\n",
@@ -173,6 +173,13 @@
     ", 'and active_ind = 1'\n",
     ", ')'\n",
     ", ''\n",
+    ", '; DIRECTORY IND SCRIPT'\n",
+    ", 'update into ea_user'\n",
+    ", 'set'\n",
+    ", 'ea_user.directory_ind (select person_id from prsnl where username = \"SWAPME123\")'\n",
+    ", 'ea_user.updt_dt_tm = cnvtdatetime(curdate,curtime3)'\n",
+    ", 'ea_user.updt_id = reqinfo->updt_id'\n",
+    ", 'ea_user.updt_cnt = cred.updt_cnt + 1'\n",
     "]\n",
     "\n",
     "# READ CSV FILE\n",
@@ -204,12 +211,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create csv for uploading to content manager\n",
     "df = pd.read_excel(r'INPUT_TEMPLATES\\Personnel_template.xlsx', header=[1], dtype= 'str')\n",
+    "input_data = pd.read_excel(path, sheet_name= 'DATA', dtype= 'str' )\n",
     "\n",
     "end_date = r\"30/12/2100\"\n",
     "alias_pool = 'External ID'\n",
