--- a/tool.ipynb
+++ b/tool.ipynb
@@ -80,10 +80,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Authview Code"
+    "### Authview Code\n",
+    "NOTE: This is no longer required as it has been put in the credential code file update script"
    ]
   },
   {
@@ -174,12 +176,13 @@
     ", ')'\n",
     ", ''\n",
     ", '; DIRECTORY IND SCRIPT'\n",
-    ", 'update into ea_user'\n",
+    ", 'update into ea_user eau'\n",
     ", 'set'\n",
-    ", 'ea_user.directory_ind (select person_id from prsnl where username = \"SWAPME123\")'\n",
-    ", 'ea_user.updt_dt_tm = cnvtdatetime(curdate,curtime3)'\n",
-    ", 'ea_user.updt_id = reqinfo->updt_id'\n",
-    ", 'ea_user.updt_cnt = cred.updt_cnt + 1'\n",
+    ", 'eau.directory_ind = 1'\n",
+    ", ',eau.updt_dt_tm = cnvtdatetime(curdate,curtime3)'\n",
+    ", ',eau.updt_id = reqinfo->updt_id'\n",
+    ", ',eau.updt_cnt = eau.updt_cnt + 1'\n",
+    ", 'where eau.username = \"SWAPME123\"'\n",
     "]\n",
     "\n",
     "# READ CSV FILE\n",
