--- a/tool.ipynb
+++ b/tool.ipynb
@@ -250,6 +250,8 @@
     "        physician_ind = '1'\n",
     "    if a_position == 'Medical Officer P1':\n",
     "        physician_ind = '1'\n",
+    "    if a_position == 'Medical Officer P2':\n",
+    "        physician_ind = '1'\n",
     "    # Edit Sheet\n",
     "    df.loc[row_number,'Username'] = a_user\n",
     "    df.loc[row_number,'External Id'] = a_extid\n",
