--- a/tool.ipynb
+++ b/tool.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,6 +30,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,7 +66,7 @@
     "]\n",
     "\n",
     "# READ CSV FILE\n",
-    "input_data = pd.read_excel(path, sheet_name= 'DATA', dtype= 'str' )\n",
+    "input_data = pd.read_excel(path, dtype= 'str' )\n",
     "\n",
     "# WRITE CODE TO TXT FILE\n",
     "for index, row in input_data.iterrows():\n",
@@ -126,6 +128,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -149,8 +152,8 @@
     "outputfilename = str(outputfilename)\n",
     "\n",
     "# CCL Code\n",
-    "ccl_code = [\n",
-    "'; CREDENTIAL MOVE SCRIPT'\n",
+    "ccl_cred_code = [\n",
+    "'; CREDENTIAL MOVE SCRIPT ------------------------------------------'\n",
     ", 'update into credential cred'\n",
     ", 'set cred.prsnl_id = (select person_id from prsnl where username = \"SWAPME123\")'\n",
     ", ', cred.credential_cd = (select code_value from code_value where code_set = 29600 and display = \"SWAP_TO_REAL_CREDENTIAL\")'\n",
@@ -183,6 +186,7 @@
     ", ',eau.updt_id = reqinfo->updt_id'\n",
     ", ',eau.updt_cnt = eau.updt_cnt + 1'\n",
     ", 'where eau.username = \"SWAPME123\"'\n",
+    ", ';---------------------------------------------------------------------'\n",
     "]\n",
     "\n",
     "# READ CSV FILE\n",
@@ -194,7 +198,7 @@
     "    to_switch_1 = str(row['USERNAME'].upper())\n",
     "    to_switch_2 = str(row['CREDENTIAL'])\n",
     "    #Write to file\n",
-    "    for a_row in ccl_code:\n",
+    "    for a_row in ccl_cred_code:\n",
     "        # Only generate code where a credential is filled out\n",
     "        if to_switch_2 != 'nan':\n",
     "            # REPLACE SWAPME123 with the username in each row of the code slab\n",
@@ -206,6 +210,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
